<resources>
    <string name="app_name">First Android App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="attempts">Tentativi:</string>
    <string name="login_button">Login</string>
    <string name="redirecting">Attendere...</string>
    <string name="auth_fail">Autenticazione fallita.</string>
</resources>